fixed overflow on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,9 @@
 /* Media query for mobile (max-width: 768px) */
 @media (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+
   /* Justera header */
 
   .header-hidden h1 {
